fix to /bookings/club/booking
